--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/LOGO.jpg" />
+    <link rel="icon" type="image/jpg" href="/Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evolve Gym</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Signika:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link
